--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": " nodemon  server.js"
+    "client-install": "npm install --prefix client",
+    "start": "node server.js ",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \" npm run server\" \" npm run client\""
   },
   "author": "",
   "license": "ISC",
